# dodar

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DODAR.md  Dockerfile  LICENSE  Makefile  README.md  benchmark-tasks-100.json  benchmark-tasks-v2.json  benchmark-tasks-v3.json  benchmark_scorer.py  blind_responses.py  error-classification-scorer-FINAL.json  experiment-conditions-FINAL.json
backend/: pyproject.toml
backend/data/benchmark/: _run_bench-1b8b123c.json  _run_bench-1ddafae9.json  _run_bench-21ce707a.json  _run_bench-233fe2b6.json  _run_bench-3c5980a0.json  _run_bench-45aacd29.json  _run_bench-48cdffe2.json  _run_bench-4fed9a55.json  _run_bench-863a4ffe.json  _run_bench-9ab1bd58.json  _run_bench-a7763b2e.json  _run_bench-b66ca1fd.json  _run_bench-c0280a5a.json  _run_bench-c48e854d.json  _run_bench-d2d49d04.json  _run_bench-d51b7e12.json
backend/data/benchmark/classifications/: classifications_20260326_195106.json  classifications_20260326_200810.json  classifications_20260327_113200.json  classifications_20260327_140714.json  classifications_20260327_154145.json  classifications_20260329_170353.json
backend/data/benchmark/results/: ACC-104_gpt-4.1-mini_E_run2.json  ACC-105_gpt-4.1-mini_B_run2.json  (+2561 more)
backend/data/scenarios/: AMB.yaml  TRD.yaml
backend/dodar/: __init__.py  agents.py  cli.py  config.py  main.py  sdk.py
backend/dodar/engine/: benchmark_executor.py  cost.py  executor.py  progress.py
backend/dodar/models/: __init__.py  benchmark.py  run.py  scenario.py  scoring.py
backend/dodar/prompts/: benchmark_builder.py  builder.py  conditions.py  templates.py  token_budget.py
backend/dodar/reporting/: export.py
backend/dodar/routes/: benchmark.py  playground.py  reports.py  runs.py  scenarios.py  scoring.py  ws.py
backend/dodar/runners/: anthropic.py  base.py  google.py  ollama.py  openai.py  registry.py
backend/dodar/scoring/: analysis.py  autoscore.py  blind.py  error_classifier.py  extraction.py  stats.py
backend/dodar/storage/: benchmark.py  runs.py  scenarios.py  scores.py
backend/tests/: conftest.py  test_agents.py  test_autoscore.py  test_blind.py  test_cli.py  test_engine.py  test_models.py  test_prompts.py  test_routes.py  test_runner_base.py  test_runners_api.py  test_scenarios.py  test_scoring_stats.py  test_sdk.py  test_storage.py
frontend/: package.json  (+2 more)
sdk/: README.md  pyproject.toml
sdk/src/dodar/: __init__.py  core.py  prompts.py  runners.py
(+38 files in other folders)
