[project]
name = "dodar"
version = "0.1.0"
description = "DODAR — Structured reasoning framework for AI agents, adapted from aviation CRM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Adam Field", email = "adam@crox.io" },
]
keywords = ["ai", "agents", "reasoning", "llm", "decision-making", "crm", "dodar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.30",
    "openai>=1.30",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
ollama = ["httpx>=0.27"]
all = ["google-genai>=1.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://dodar.crox.io"
Documentation = "https://dodar.crox.io/framework"
Repository = "https://github.com/afieldofdreams/dodar"
Research = "https://dodar.crox.io/research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dodar"]
